--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SisMed": "Server=Localhost\\SQLExpress;Database=SisMed;Integrated Security=True;"
+    "SisMed": "Server=LAB-F08-18;Database=ProjetoBase;User Id=sa;Password=senai@123;
+    "
   }
 }
