--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SisMed": "Server=LAB-F08-18;Database=ProjetoBase;User Id=sa;Password=senai@123;
-    "
+    "sgu": "Server=LAB-F08-18;Database=sgu;User Id=sa;Password=senai@123;"
   }
 }
